[#45] changed indentation config and formatted all files